# Q5-temperature-controller

./: CMakeLists.txt  DHT.pro  README.md  csv_database.csv  database.cpp  database.h  database.ui  dialog.cpp  dialog.h  fortuneserver.cpp  fortuneserver.h  fortunethread.h  graph.cpp  graph.h  graph.ui  log.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
BMP180SerialSketch/: BMP180SerialSketch.ino
Docs/: Doxyfile  UML.cdr
Docs/html/: annotated.html  classDatabase-members.html  classDatabase.html  classDialog-members.html  classDialog.html  classFortuneServer-members.html  classFortuneServer.html  classFortuneThread-members.html  classFortuneThread.html  classGraph-members.html  classGraph.html  classMainWindow-members.html  classMainWindow.html  class_database-members.html  class_database.html  class_database__coll__graph.dot  class_dialog-members.html  class_dialog.html  class_fortune_server-members.html  class_fortune_server.html  class_fortune_server__inherit__graph.dot  class_fortune_thread-members.html  class_fortune_thread.html  class_fortune_thread__coll__graph.dot  class_graph-members.html  class_graph.html  class_main_window-members.html  class_main_window.html  classes.html  database_8h_source.html  dialog_8h_source.html  files.html  fortuneserver_8h_source.html  fortunethread_8h_source.html  functions.html  functions_func.html  functions_vars.html  graph_8h_source.html  graph_legend.html  hierarchy.html  (+11 more)
Docs/latex/: annotated.tex  class_database.eps  class_database.tex  class_database.tex.tmp  class_dialog.tex  class_dialog__coll__graph.dot  class_fortune_server.eps  (+18 more)
(+34 files in other folders)
